# qjoypad

./: .gitignore  CMakeLists.txt  INSTALL.txt  README.md  README.txt  flash.cpp  flash.h  form.cpp  form.h  keycode.cpp  keycode.h  main.cpp  qjoypad.desktop  qjoypad.pro  rebuild-package.sh  savetypes.cpp  savetypes.h  sendevent.cpp  sendevent.h
.github/workflows/: workflow.yml
cmake/: cmake_uninstall.cmake.in
icons/: CMakeLists.txt
scripts/: _helpers.sh  install-snap.sh  snapcraft.sh  uninstall-snap.sh
snap/local/: snapcraft.scaffold.yaml
src/: .kdbgrc.qjoypad  CMakeLists.txt  Makefile  axis.cpp  axis.h  axis_edit.cpp  axis_edit.h  axisw.cpp  axisw.h  button.cpp  button.h  button_edit.cpp  button_edit.h  buttonw.cpp  buttonw.h  component.h  config  config.h.in  configure  constant.h  device.h  error.h  event.cpp  event.h  flash.cpp  flash.h  getkey.cpp  getkey.h  icon.cpp  icon.h  install_log  joypad.cpp  joypad.h  joypadw.cpp  joypadw.h  joyslider.cpp  joyslider.h  keycode.cpp  keycode.h  keydialog.cpp  (+14 more)
src/trayicon/: moc_trayicon.cpp  trayicon.cpp  trayicon.h  trayicon_x11.cpp
translations/: qjoypad_de.ts  qjoypad_nl.ts
